--- a/profile-viewer/index.html
+++ b/profile-viewer/index.html
@@ -9,13 +9,13 @@
     />
     <link
       rel="modulepreload"
-      href="pkg/package.js"
+      href="/profile-viewer/pkg/package.js"
       as="script"
       type="text/javascript"
     />
     <link
       rel="preload"
-      href="pkg/package_bg.wasm"
+      href="/profile-viewer/pkg/package_bg.wasm"
       as="fetch"
       type="application/wasm"
       crossorigin="anonymous"
@@ -25,8 +25,8 @@
   <body>
     <section id="app"></section>
     <script type="module">
-      import init from "pkg/package.js";
-      init("pkg/package_bg.wasm");
+      import init from "/profile-viewer/pkg/package.js";
+      init("/profile-viewer/pkg/package_bg.wasm");
     </script>
   </body>
 </html>
