--- a/wine-log-202204/index.html
+++ b/wine-log-202204/index.html
@@ -122,6 +122,11 @@
       <h2 id="wainwoshi-meta">ワインを始めた</h2>
 <p>同僚がワイン好きで、コーヒーが好きなら確実にハマると言うので、試してみることにした。</p>
 <p>コーヒーの反省を生かして、ワインは雑でもいいからちゃんと記録していこうと思う。</p>
+<ul>
+<li>1 本目: Giacomo Fenocchio 2016 / Barolo Bussia</li>
+<li>2 本目: Cascina Ballarin 2016 / Barolo</li>
+<li>3 本目: Canalicchio di Sopra 2015 / Brunello di Montalcino</li>
+</ul>
 <span id="continue-reading"></span><h2 id="1-ben-mu-giacomo-fenocchio-2016-barolo-bussia">1 本目: Giacomo Fenocchio 2016 / Barolo Bussia</h2>
 <p>料理系の YouTube 動画 を見てたら「バローロ」という名前が出てきて、たしか同僚も言ってたような？と思い出して、飲んでみたくなったのがきっかけ。</p>
 <p>とりあえず予算を伝えたらいくつか候補をもらったので、ヨドバシカメラのエクストリーム便で注文したら次の日に届いてマジでエクストリームだった。心の準備ができていない。</p>
