--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
                                         <h2 id="wainwoshi-meta">ワインを始めた</h2>
 <p>同僚がワイン好きで、コーヒーが好きなら確実にハマると言うので、試してみることにした。</p>
 <p>コーヒーの反省を生かして、ワインは雑でもいいからちゃんと記録していこうと思う。</p>
+<ul>
+<li>1 本目: Giacomo Fenocchio 2016 / Barolo Bussia</li>
+<li>2 本目: Cascina Ballarin 2016 / Barolo</li>
+<li>3 本目: Canalicchio di Sopra 2015 / Brunello di Montalcino</li>
+</ul>
 
                                     </div>
                                     <div class="read-more">
