--- a/wine-log-202204/index.html
+++ b/wine-log-202204/index.html
@@ -133,16 +133,20 @@
 <p><img src="/img/wine-giacomof2016.jpg" alt="wine-giacomof2016" /></p>
 <h3 id="1-ri-mu">1 日目</h3>
 <p>最初はアルコールがきついだけで味がほぼしなかったけど、15 分くらいで少し華やかな香り出てきて、30 分くらいで華やかさがはっきりして、45 分くらいでほぼジュース。</p>
-<p>想像していたフルボディとは全然違って、いい意味で裏切られた感じ。</p>
-<p>クリアなのにジューシーな味わい。ワインの美味しさを理解できた気がする。</p>
+<p>想像していたフルボディとは全然違って、水色は向こう側が透けて見える程度にはクリアな赤。
+あとで聞いた話によると、バローロを構成するネッビオーロ種というブドウは色素がそこまで強くなくて、長期熟成に向く品種とのこと。</p>
+<p>こういった品種を使ったワインは開栓してから時間が経つとさらに味が伸びる。一方そうではない品種を使ったワインだと開栓した瞬間がピークで、そのあと時間が経てば経つほど味が落ちていく。
+これまで自分で買って飲んだワインはまさにそうだったので（なので毎回飲み切れない）、なるほどなぁと納得してしまった。</p>
+<p>クリアなので味わいもみずみずしくてフルーティなんだけど、味が薄いとかではなく、しっかりタンニンの厚みもある。</p>
+<p>いい意味で裏切られた感じ。ワインの美味しさを少し理解できた気がする。</p>
 <h3 id="4-ri-mu">4 日目</h3>
-<p>深みが増しました。以前はまだ軽やかさ、フレッシュな感じがあったけど、それが落ち着いてすげーうまい。</p>
+<p>深みが増した。以前はまだ軽やかさ、フレッシュな感じがあったけど、それが落ち着いてすげーうまい。</p>
 <p>こんなに美味しいと、同僚が「ワイン飲むときはなにかと合わせることはなくてワイン単体で味わってる」と言っていた意味がよくわかった。繊細な味の変化を捉えるには、ワイン以外の味がするとかなり邪魔になる。</p>
 <h3 id="5-ri-mu">5 日目</h3>
 <p>4 日目と大きく変わらず。ポジティブな要素が増えたようには感じなかった。</p>
-<p>ただ、自分はこれまの人生で赤ワインのボトルを 1 本飲み切るということが一度もなかったので、最後まで美味しく飲めたのは自分でもびっくりした。</p>
+<p>ただ、自分はこれまで赤ワインのボトル 1 本飲み切るということが一度もなかったので、最後まで美味しく飲めたのは自分でもびっくりした。</p>
 <h2 id="2-ben-mu-cascina-ballarin-2016-barolo">2 本目: Cascina Ballarin 2016 / Barolo</h2>
-<p><a href="https://lacantina-bessho.tokyo/">La Cantina Bessho</a> に行った。ネッビオーロの特徴や、バローロをフルボディという人はエアプ疑惑ある、などいろいろお話を伺うことができた。</p>
+<p><a href="https://lacantina-bessho.tokyo/">La Cantina Bessho</a> に行った。ネッビオーロの特徴や、バローロをフルボディという人はエアプ疑惑ある、前述のネッビオーロ種の特徴などいろいろお話を伺うことができた。</p>
 <p>Cascina Ballarin は伝統的な手法だけに固執せずに、ネッビオーロの特性を引き出して、バローロの未来の味を作るワイナリーとのことでした。その味を試して欲しい、と。</p>
 <p><img src="/img/wine-cascinab2016.jpg" alt="wine-cascinab2016" /></p>
 <h3 id="1-ri-mu-1">1 日目</h3>
@@ -156,14 +160,17 @@
 <p>ここまで飲んでわかってきたのは、自分の味の好みの方向性がコーヒーとまったく同じだということ。バローロはコーヒーで言うなら Ethiopia Natural という感じで、<a href="https://onacoffee.com.au/products/raspberry-candy">ONA の Raspberry Candy</a> がどストライクだったのに似ている。</p>
 <h2 id="3-ben-mu-canalicchio-di-sopra-2015-brunello-di-montalcino">3 本目: Canalicchio di Sopra 2015 / Brunello di Montalcino</h2>
 <p>初めてのブルネッロ。同僚からサンジョベーゼを試せ、とのお達しだったため。</p>
-<p>今回も <a href="https://lacantina-bessho.tokyo/">La Cantina Bessho</a> に行っておすすめを聞いた。いつも安くて美味しいワインを選んでいただいて本当にありがたい。この店以外では買いたくないな。</p>
+<p>今回は多少調べてみることにした。サンジョベーゼ種は多くの派生種があるようで、大きく分けてサンジョベーゼ・グロッソ、サンジョベーゼ・ピッコロがある。そしてそのブドウを使った DOCG（イタリアのワイン法で定められた統制保証原産地呼称。バローロも同様）として有名なのは「ブルネッロ・ディ・モンタルチーノ」「キャンティ・クラシコ」「キャンティ」などがある。</p>
+<p>ネットでそれぞれの DOCG の特徴をざっくり見た感じだと、自分の好みは「ブルネッロ・ディ・モンタルチーノ」に間違いなさそう。</p>
+<p>当たりがついたところで、今回も <a href="https://lacantina-bessho.tokyo/">La Cantina Bessho</a> に行っておすすめを聞いた。いつも安くて美味しいワインを選んでいただいて本当にありがたい。この店以外では買いたくないな。</p>
 <p><img src="/img/wine-canalicchiods2015.jpg" alt="wine-canalicchiods2015" /></p>
 <h3 id="1-ri-mu-2">1 日目</h3>
-<p>開栓してグラスに注いだ時点での香りがすでにいい・・・。過去 2 本のバローロはフレッシュさが目立っていたけど、フレッシュさのある複雑な香り。</p>
+<p>開栓してグラスに注いだ時点での香りがすでにいい・・・。過去 2 本のバローロはフレッシュさが目立っていたけど、フレッシュさもありつつ複雑な香り。</p>
 <p>飲んでみるとめちゃくちゃ旨味がある。ワインでここまで強い旨味を感じるのは初めてだ。あと甘い。最後に酸味がスッと抜ける。これ、15%とは全然思えない。アルコール感がない。</p>
 <p>開栓してすぐなのに、ここまで美味しいのはビビるなー。</p>
 <p>比較になるけど、タンニンは強くない気がした。旨味と甘みが強すぎて苦味が目立ってないだけの可能性もありそう。なんにしてもうますぎる。ひっかかるような味が何一つない。口に含んで飲み下してから時間が経っても口の中が不快にならない。桃源郷みたいなワインだな。</p>
 <p>時間が経つとさすがに苦味も感じるようになる。けどあくまでスムーズでとても良い飲み口。</p>
+<p>このワインはラベルの時計塔のモチーフを唯一使うことが許されているワイナリーとのこと。年々値段が上がっていて、今年の 4 月にも値上げしたらしい。ワインも争奪戦だな。</p>
 <h3 id="3-ri-mu-1">3 日目</h3>
 <p>1 日目のインパクトが強すぎて大きな変化は感じられなかった。すでに <a href="https://www.instagram.com/hi_sputnik/">Sputnik</a> で 3 杯飲んでしまってた影響がでかい気がする。</p>
 <h2 id="omake">おまけ</h2>
