--- a/tasting-light-roast-espresso/index.html
+++ b/tasting-light-roast-espresso/index.html
@@ -130,8 +130,9 @@
 <li>Light Up Coffee</li>
 <li>MÖWE COFFEE ROASTARS</li>
 <li>KOFFEE MAMEYA</li>
+<li>Ignis</li>
+<li>Acid Coffee Tokyo</li>
 </ul>
-<p>「浅煎りエスプレッソ」って「浅煎り豆のエスプレッソ」のことなんだけど、ついつい省略して言ってしまう。</p>
 <span id="continue-reading"></span><h2 id="wavy-coffee-roasters">Wavy Coffee Roasters</h2>
 <p><img src="/img/espresso-wavy.jpg" alt="espresso-wavy" /></p>
 <p>「浅煎りエスプレッソ」という枠ではくくりたくない、「Wavy のエスプレッソ」を体験できた。</p>
@@ -165,6 +166,32 @@
 <p>Agua Tibia はそのままの状態での美味しさが際立っていた。砂糖とミルクを入れると美味しいっちゃー美味しいんだけど、ちょっと安っぽい味になってしまった感じがある。</p>
 <p>Cerro Azul はそのままの状態だと酸味が少し目立っていたけど、ミルクを入れると爆発的な美味しさだった。ここまで強い酸味とミルクの相性を良くすることができるんだな、と原点回帰した気持ちになった。</p>
 <p>最初 Thageini Indigo CM washed を飲みたかったんだけど、この豆は量が少なくてエスプレッソの調整できてないとのことでダメだった。エスプレッソでおすすめあります？と聞いてみるのが良さそう。</p>
+<h2 id="ignis">Ignis</h2>
+<p><img src="/img/espresso-ignis.jpg" alt="espresso-ignis" /></p>
+<p>最近行ってなかった Ignis。</p>
+<p>オープン当初は豆も 6 種類くらいだったと思うけど、訪問した日は 13 種類。並べてない豆も含めると全部で 20 種類ほどはあるとのこと。</p>
+<p>今回は El Paraiso Tropical と Brazil Guariroba Topazio にした。</p>
+<p>El Paraiso はドリップで飲んだり、<a href="https://visualizer.coffee/shots/c4e157fe-e79b-4130-a356-fea43ed9576c">MAME の El Paraiso Pink でエスプレッソやったり</a>、ある程度馴染みはあるものの、いかんせん種類が多すぎて全然把握できていない。</p>
+<p><a href="https://www.uniterra-nomad.com/">Nomad</a> で淹れてくれる El Paraiso Tropical は鮮烈な味わい。とろっとした質感でパイナップルのような明るい酸味と甘味が感じられる。</p>
+<p>エルパラエスプレッソは Ignis の代名詞だなーと思う。伝統的なエスプレッソのような苦味がなく、だけどウォータリーでもなく、ジュースのようにとろっとしていて、もはやエスプレッソとは言い難い。</p>
+<p>もともと 1 杯だけ予定だったけど、エルパラエスプレッソが優勝だったので「もう 1 杯、このエスプレッソは飲んでほしいってやつあります？」と聞いたら、おすすめしてくれたのが Brazil Guariroba Topazio。</p>
+<p>提供前から「これが Brazil？って思うはずです。かなりぶっ飛んでます」と期待値ガンガン上げていくスタイルだったけど（Ignis はエンターテインメント）、飲んでみるとたしかにすごいインパクト。とてもスパイシーな味わいで、ちょっとどう表現していいかわからなかったけど、「山椒」が自分的には一番しっくりきた。温度が下がってくると、かなり落ち着いた味わいになって、紹興酒のようなお酒っぽいニュアンスも出てきて、この変化も面白い。Topazio という品種は近年交配によって生まれたようで、もともとおとなしい味わいらしく、特徴的なフレーバーはプロセス由来ということになる。</p>
+<p>むちゃくちゃ堪能できた。好きな豆を選んでエスプレッソを抽出してもらえる貴重なお店。</p>
+<p>そういえば Nomad での抽出で分厚く出たクレマをスプーンですくって減らしてから提供していたのが印象的だった。あまりクレマが多いと、液面に到達するのに邪魔だからだったりするのかな？ 今度行ったとき聞いてみたい。</p>
+<h2 id="acid-coffee-tokyo">Acid Coffee Tokyo</h2>
+<p><img src="/img/espresso-acid.jpg" alt="espresso-acid" /></p>
+<p>何度かお話したことある方だったので、躊躇することなく「エスプレッソを飲みに来ました」と伝えて、Ignis でエルパラとブラジル飲んだことも言った。微妙に間があって、「時間に余裕ありますか？」と聞かれて、Tamiru Tadesse Underscreen をおすすめされた（おそらく豆は選べると思う）。淹れ直しをするかもしれないから、余計に時間かかるかも、と。<a href="https://visualizer.coffee/search?bean_type=Ethiopia+Tamiru+Tadesse+Underscreen&amp;commit=Search&amp;user=Yuki+Kodama&amp;user_id=37241c95-864c-4722-a90a-deeb006e545f">Tamiru のエスプレッソ抽出は自分も TurboBloom で試していた</a>けど、いまいち満足する仕上がりにはなっていなかった。その意味でもめちゃくちゃよい提案でした。</p>
+<p>絶対一発で決める！と言って、入念に作業を始めて、いざ抽出開始すると、数秒で「あ、ダメだ」と flow rate が低くて詰まっているらしい。いやー、めっちゃわかる。エスプレッソって博打感ある。</p>
+<p>EK43 の挽目を再調整してもう一度。だけど、まだちょっと詰まっているらしい。味見をさせてもらったけど、これはこれで美味しいという水準だった。ただ、「全然こんなもんじゃないんです」ってことで３度目。</p>
+<p>今度は抽出開始数秒で「やった！いった！」と、flow rate 的に申し分ない抽出に。</p>
+<p>飲んでみると Tamiru の甘くて複雑な味わいが全面に出ていて、なるほどー！となった。２度目のショットは全体的に暗くて、果実感が押しつぶされていた。</p>
+<p>Acid がやりたいエスプレッソを垣間見ることができた。特に失敗したショットを味見できた経験は大きい。渾身の１杯を提供するために妥協せずにやり直してくれたのが本当に嬉しかった。</p>
+<p>ちなみにチェイサーで El Paraiso の冷やしコーヒーを少しいただいて、これもスーパーフルーティでした。</p>
+<h2 id="geng-xin-lu-li">更新履歴</h2>
+<ul>
+<li>2022/05/04: 初稿</li>
+<li>2022/05/05: Ignis、Acid を追加</li>
+</ul>
 
     </div>
 
