update: tasting espresso

--- a/tasting-light-roast-espresso/index.html
+++ b/tasting-light-roast-espresso/index.html
@@ -126,13 +126,13 @@
 <h2 id="mu-ci">目次</h2>
 <ul>
 <li>Swamp</li>
-<li>Wavy Coffee Roasters</li>
+<li>Acid Coffee Tokyo</li>
 <li>Finetime Coffee Roasters</li>
+<li>Wavy Coffee Roasters</li>
 <li>Light Up Coffee</li>
 <li>MÖWE COFFEE ROASTARS</li>
 <li>KOFFEE MAMEYA</li>
 <li>Ignis</li>
-<li>Acid Coffee Tokyo</li>
 </ul>
 <span id="continue-reading"></span><h2 id="swamp">Swamp</h2>
 <p><img src="/img/espresso-swamp.jpg" alt="espresso-swamp" /></p>
@@ -143,6 +143,21 @@
 <p>コロンビアの方はボディ主体。甘さはセミドライトマトの旨味を合わせ持った印象で、
 味わいはしっかりしてるのにアフターはキレイに抜けて、余韻にも一切渋みや苦味がない。</p>
 <p>空間としては広くないのに、不思議と居心地が良くて、何度でも足を運びたいいいお店でした。</p>
+<h2 id="acid-coffee-tokyo">Acid Coffee Tokyo</h2>
+<p><img src="/img/espresso-acid.jpg" alt="espresso-acid" /></p>
+<p>何度かお話したことある方だったので、躊躇することなく「エスプレッソを飲みに来ました」と伝えて、Ignis でエルパラとブラジル飲んだことも言った。微妙に間があって、「時間に余裕ありますか？」と聞かれて、Tamiru Tadesse Underscreen をおすすめされた（おそらく豆は選べると思う）。淹れ直しをするかもしれないから、余計に時間かかるかも、と。<a href="https://visualizer.coffee/search?bean_type=Ethiopia+Tamiru+Tadesse+Underscreen&amp;commit=Search&amp;user=Yuki+Kodama&amp;user_id=37241c95-864c-4722-a90a-deeb006e545f">Tamiru のエスプレッソ抽出は自分も TurboBloom で試していた</a>けど、いまいち満足する仕上がりにはなっていなかった。その意味でもめちゃくちゃよい提案でした。</p>
+<p>絶対一発で決める！と言って、入念に作業を始めて、いざ抽出開始すると、数秒で「あ、ダメだ」と flow rate が低くて詰まっているらしい。いやー、めっちゃわかる。エスプレッソって博打感ある。</p>
+<p>EK43 の挽目を再調整してもう一度。だけど、まだちょっと詰まっているらしい。味見をさせてもらったけど、これはこれで美味しいという水準だった。ただ、「全然こんなもんじゃないんです」ってことで３度目。</p>
+<p>今度は抽出開始数秒で「やった！いった！」と、flow rate 的に申し分ない抽出に。</p>
+<p>飲んでみると Tamiru の甘くて複雑な味わいが全面に出ていて、なるほどー！となった。２度目のショットは全体的に暗くて、果実感が押しつぶされていた。</p>
+<p>Acid がやりたいエスプレッソを垣間見ることができた。特に失敗したショットを味見できた経験は大きい。渾身の１杯を提供するために妥協せずにやり直してくれたのが本当に嬉しかった。</p>
+<p>ちなみにチェイサーで El Paraiso の冷やしコーヒーを少しいただいて、これもスーパーフルーティでした。</p>
+<h2 id="finetime-coffee-roasters">Finetime Coffee Roasters</h2>
+<p><img src="/img/espresso-finetime.jpg" alt="espresso-finetime" /></p>
+<p>ああ、これぞ浅煎りエスプレッソだよ！こういうのが飲みたかったんだよ！というのが出てきて嬉しかった。</p>
+<p>この日は Worka washed。口に含んだ瞬間、明るい酸味が広がって、そのあとすぐに柔らかい甘みが感じられるので、絶妙なバランスで美味しい浅煎りエスプレッソになっていた。</p>
+<p>お店の方と浅煎りエスプレッソの話で盛り上がって楽しかった。温度が 0.5℃ 変わるだけでガラッと味が変わるという話になって、試しに 0.5℃ 下げたのを味見させてもらったら、最初のと違って全体的に暗くなった。この味で不味いってことは決してなくて、これが美味しいという人もいるはず。だけど、あの明るい味を出すというのはもうバリスタの表現の部分なんだろうなぁ、と感じた。</p>
+<p>エスプレッソを注文すると「あ、来た」と思うようで、提供したあとスプーンで撹拌すると「やばい、ガチ勢だ」とわかって「試される・・・！」とちょっと緊張するようです。</p>
 <h2 id="wavy-coffee-roasters">Wavy Coffee Roasters</h2>
 <p><img src="/img/espresso-wavy.jpg" alt="espresso-wavy" /></p>
 <p>「浅煎りエスプレッソ」という枠ではくくりたくない、「Wavy のエスプレッソ」を体験できた。</p>
@@ -151,12 +166,6 @@
 <p>Wavy はこれまで何度かオンラインで豆を買っていて、<a href="https://visualizer.coffee/shots/16cc4e8c-7a6b-4968-a72e-0c86d79ae279">Passion Fruits BCM を TurboBloom で抽出してラテにすると完全に優勝できたし</a> 、<a href="https://visualizer.coffee/shots/78d4a24e-202f-45d3-a5a7-ed9bf43914bd">Tamiru Tadesse はバチバチに浅くてエスプレッソでも大好きなマスカットフレーバー出せたし</a> 、いつか行きたい！と思っていてなかなか行けてなかったお店の筆頭だった。</p>
 <p>Instagram で豆の告知をしているけどオンラインには並ばないなー？というのもあって、今回はエスプレッソを飲むことと、Lactic WAVY を入手するのが目的だった。どうやらオンラインに出すとすぐに売り切れちゃうから絞っているみたい。</p>
 <p>あとエスプレッソは複数の豆をブレンドしているようで、ちょっとシングルオリジンでどうにかなる味わいではなかったので納得した。とはいえすごいけど！</p>
-<h2 id="finetime-coffee-roasters">Finetime Coffee Roasters</h2>
-<p><img src="/img/espresso-finetime.jpg" alt="espresso-finetime" /></p>
-<p>ああ、これぞ浅煎りエスプレッソだよ！こういうのが飲みたかったんだよ！というのが出てきて嬉しかった。</p>
-<p>この日は Worka washed。口に含んだ瞬間、明るい酸味が広がって、そのあとすぐに柔らかい甘みが感じられるので、絶妙なバランスで美味しい浅煎りエスプレッソになっていた。</p>
-<p>お店の方と浅煎りエスプレッソの話で盛り上がって楽しかった。温度が 0.5℃ 変わるだけでガラッと味が変わるという話になって、試しに 0.5℃ 下げたのを味見させてもらったら、最初のと違って全体的に暗くなった。この味で不味いってことは決してなくて、これが美味しいという人もいるはず。だけど、あの明るい味を出すというのはもうバリスタの表現の部分なんだろうなぁ、と感じた。</p>
-<p>エスプレッソを注文すると「あ、来た」と思うようで、提供したあとスプーンで撹拌すると「やばい、ガチ勢だ」とわかって「試される・・・！」とちょっと緊張するようです。</p>
 <h2 id="light-up-coffee">Light Up Coffee</h2>
 <p><img src="/img/espresso-lightup.jpg" alt="espresso-lightup" /></p>
 <p>マジで安納芋だった。</p>
@@ -188,19 +197,11 @@
 <p>提供前から「これが Brazil？って思うはずです。かなりぶっ飛んでます」と期待値ガンガン上げていくスタイルだったけど（Ignis はエンターテインメント）、飲んでみるとたしかにすごいインパクト。とてもスパイシーな味わいで、ちょっとどう表現していいかわからなかったけど、「山椒」が自分的には一番しっくりきた。温度が下がってくると、かなり落ち着いた味わいになって、紹興酒のようなお酒っぽいニュアンスも出てきて、この変化も面白い。Topazio という品種は近年交配によって生まれたようで、もともとおとなしい味わいらしく、特徴的なフレーバーはプロセス由来ということになる。</p>
 <p>むちゃくちゃ堪能できた。好きな豆を選んでエスプレッソを抽出してもらえる貴重なお店。</p>
 <p>そういえば Nomad での抽出で分厚く出たクレマをスプーンですくって減らしてから提供していたのが印象的だった。あまりクレマが多いと、液面に到達するのに邪魔だからだったりするのかな？ 今度行ったとき聞いてみたい。</p>
-<h2 id="acid-coffee-tokyo">Acid Coffee Tokyo</h2>
-<p><img src="/img/espresso-acid.jpg" alt="espresso-acid" /></p>
-<p>何度かお話したことある方だったので、躊躇することなく「エスプレッソを飲みに来ました」と伝えて、Ignis でエルパラとブラジル飲んだことも言った。微妙に間があって、「時間に余裕ありますか？」と聞かれて、Tamiru Tadesse Underscreen をおすすめされた（おそらく豆は選べると思う）。淹れ直しをするかもしれないから、余計に時間かかるかも、と。<a href="https://visualizer.coffee/search?bean_type=Ethiopia+Tamiru+Tadesse+Underscreen&amp;commit=Search&amp;user=Yuki+Kodama&amp;user_id=37241c95-864c-4722-a90a-deeb006e545f">Tamiru のエスプレッソ抽出は自分も TurboBloom で試していた</a>けど、いまいち満足する仕上がりにはなっていなかった。その意味でもめちゃくちゃよい提案でした。</p>
-<p>絶対一発で決める！と言って、入念に作業を始めて、いざ抽出開始すると、数秒で「あ、ダメだ」と flow rate が低くて詰まっているらしい。いやー、めっちゃわかる。エスプレッソって博打感ある。</p>
-<p>EK43 の挽目を再調整してもう一度。だけど、まだちょっと詰まっているらしい。味見をさせてもらったけど、これはこれで美味しいという水準だった。ただ、「全然こんなもんじゃないんです」ってことで３度目。</p>
-<p>今度は抽出開始数秒で「やった！いった！」と、flow rate 的に申し分ない抽出に。</p>
-<p>飲んでみると Tamiru の甘くて複雑な味わいが全面に出ていて、なるほどー！となった。２度目のショットは全体的に暗くて、果実感が押しつぶされていた。</p>
-<p>Acid がやりたいエスプレッソを垣間見ることができた。特に失敗したショットを味見できた経験は大きい。渾身の１杯を提供するために妥協せずにやり直してくれたのが本当に嬉しかった。</p>
-<p>ちなみにチェイサーで El Paraiso の冷やしコーヒーを少しいただいて、これもスーパーフルーティでした。</p>
 <h2 id="geng-xin-lu-li">更新履歴</h2>
 <ul>
 <li>2022/05/04: 初稿</li>
 <li>2022/05/05: Ignis、Acid を追加</li>
+<li>2022/08/29: Swamp を追加</li>
 </ul>
 
     </div>
