--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     <div class="post__summary">
                                         <h2 id="we-trust">We Trust?</h2>
 <p>信仰してますか？</p>
-<p>ということで、今年も <a href="https://definitive.thebase.in/categories/5526307">Definitive. Advent Calendar 2023</a>がリリースされました。
+<p>ということで、今年も <a href="https://definitive.thebase.in">Definitive. Advent Calendar 2023</a>がリリースされました。
 去年は飲みたい豆からつまみ食い的に選んでしまったため、最後に残った Don Benjie Rum Barrel Aged を飲んだのは3月くらいでした。</p>
 <p>今年は同じことを繰り返さないよう、毎日順番にブラインドで飲むことにしました。その都度簡単なメモを残すようにして、この記事で公開し、そのあとパナ氏から8日分の正解を教えてもらって答え合わせする、恥晒し企画です。</p>
 <p>アドベントカレンダーは超信仰を選びました。対戦よろしくお願いします！！！</p>
