--- a/definitive-2023/index.html
+++ b/definitive-2023/index.html
@@ -251,7 +251,7 @@
 <tr><td style="text-align: right">9</td><td>Adaura Honey</td><td>Adaura Geisha Honey</td><td>✅</td></tr>
 <tr><td style="text-align: right">10</td><td>Bernardina 1262</td><td>Longboard Windy Ridge GN</td><td></td></tr>
 <tr><td style="text-align: right">11</td><td>Nuguo AN</td><td>Nuguo	AN 355 AN</td><td>🔺</td></tr>
-<tr><td style="text-align: right">12</td><td>Totumas W</td><td>Mount Totumas GW</td><td></td></tr>
+<tr><td style="text-align: right">12</td><td>Totumas W</td><td>Mount Totumas GW</td><td>✅</td></tr>
 <tr><td style="text-align: right">13</td><td>Nuguo AW</td><td>Nuguo AN 372</td><td>🔺</td></tr>
 <tr><td style="text-align: right">14</td><td>Nuguo or Black Moon</td><td>Nuguo AN 376</td><td>🔺</td></tr>
 <tr><td style="text-align: right">15</td><td>Black Moon W</td><td>Abu GW 78 Mossto</td><td></td></tr>
