--- a/setup-yew-dev/index.html
+++ b/setup-yew-dev/index.html
@@ -170,7 +170,7 @@
 </span><span style="color:#abb2bf;">note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.
 </span></code></pre>
 <h3 id="reason-version-mismatch">Reason: Version mismatch</h3>
-<p>Yew's <code>Cargo.toml</code> has <code>wasm-bindgen = { version = &quot;0.2.59&quot;, optional = true }</code>. But my <code>wasm-bindgen-cli</code> is <code>0.2.58</code>.</p>
+<p>Yew's <code>Cargo.toml</code> has <code>wasm-bindgen = { version = "0.2.59", optional = true }</code>. But my <code>wasm-bindgen-cli</code> is <code>0.2.58</code>.</p>
 <pre style="background-color:#2b303b;color:#6c7079;"><code><span style="color:#abb2bf;">$ wasm-bindgen --version
 </span><span style="color:#abb2bf;">wasm-bindgen 0.2.58
 </span></code></pre>
